--- a/covid19/index.html
+++ b/covid19/index.html
@@ -351,12 +351,9 @@ function addSuggestion(suggestion){
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <a class="navbar-brand" href="../index.html">
         <img src="../images/hand-icon.png" height="25">
-          SignLab 
-        </a>
-        <a class="nav-item nav-link js-scroll-trigger" href="#page-top"> 
-          COVID-19 project
+          SignLab Amsterdam
         </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
