--- a/covid19/index.html
+++ b/covid19/index.html
@@ -243,60 +243,25 @@ function changeFunc(myRadio) {
     document.getElementById("avatar").setAttribute("class", "CWASAAvatar av0");
     document.getElementById("videos").setAttribute("class", "undisplayed");
     document.getElementById("play").setAttribute("class", "btn btn-primary displayed");
-    document.getElementById("freestyle").setAttribute("class", "undisplayed");
-  }
-  else if (myRadio.value == "freestyle") {
-    document.getElementById("avatar").setAttribute("class", "CWASAAvatar av0");
-    document.getElementById("videos").setAttribute("class", "undisplayed");
-    document.getElementById("play").setAttribute("class", "undisplayed");
-    document.getElementById("freestyle").setAttribute("class", "btn btn-primary displayed");
+    document.getElementById("speedAdj").setAttribute("class", "CWASASpeed av0");
+    document.getElementById("outputGloss").setAttribute("class", "txtGloss av0");
   }
   else if (myRadio.value == "video") {
     document.getElementById("avatar").setAttribute("class", "undisplayed");
     document.getElementById("videos").setAttribute("class", "prerecorded");
     document.getElementById("play").setAttribute("class", "btn btn-primary displayed");
-    document.getElementById("freestyle").setAttribute("class", "undisplayed");
+    document.getElementById("speedAdj").setAttribute("class", "undisplayed");
+    document.getElementById("outputGloss").setAttribute("class", "undisplayed");
   }
 }
 
-///Makes an ajax call to the python script (by way of a php wrapper)
-function callPython(text) {
-  showBusyState();
-  $.ajax({
-    url : 'pythonCall.php',
-    type : 'POST',
-    data: {"input": text},
-    dataType: "json",
-    success : onSuccess,
-    error : onError,
-  });
-  function onSuccess(result) {
-    if (result.errorcode) {
-      console.log('Error '+result.errorcode+' occured on the server. Error message: '+result.error);
-    } else {
-      output = result.output.split(";");
-      glosses = output[1];
-      console.log(glosses)
-      playText(output[2].trim());
-    }
-    showBusyState(false);
-  }
-  function onError(xhr, error) {
-    console.log ('Something went wrong. Error message: '+error);
-    showBusyState(false);
-  }
-  function showBusyState(state) {
-    $(document.body).toggleClass('busy', state===undefined?true:state);
-  }
-}
+// function displayInfo(id){
+//   document.getElementById(id).setAttribute("class", "displayInfo");
+// }
 
-function displayInfo(id){
-  document.getElementById(id).setAttribute("class", "displayInfo");
-}
-
-function undisplayInfo(id){
-  document.getElementById(id).setAttribute("class", "undisplayed");
-}
+// function undisplayInfo(id){
+//   document.getElementById(id).setAttribute("class", "undisplayed");
+// }
 
 //Enables all tooltips in the document
 $(document).ready(function(){
@@ -317,19 +282,6 @@ function addSuggestion(suggestion){
 }
 
 </script>
-
-
-<!-- <script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython.min.js">
-</script>
-
-<script type="text/javascript"
-    src="https://cdn.jsdelivr.net/npm/brython@3.8.9/brython_stdlib.js">
-</script> -->
-
-<!-- Necessary for translating python into javascript -->
-<!-- <script src="static/brython.js"></script>
-<script src="static/brython_stdlib.js"></script> -->
 
 
 </head>
@@ -461,24 +413,8 @@ function addSuggestion(suggestion){
               <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
               <label for="avatar" style="margin-right: 5px">Pre-processed avatar translation</label>
 
-            <br>
-            <!-- Defines the button and questioncircle displayed for the option "freestyle" -->
-            <input type="radio" id="freestyleDisplay" name="display" value="freestyle" onclick="changeFunc(this);">
-            <label for="freestyle" style="margin-right:5px"  data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed.">On-demand avatar translation</label>
-           <!--  <i class="fa fa-question-circle" data-toggle="tooltip" data-placement="bottom" title="This functionality is experimental. Accuracy of the translation cannot be guaranteed."></i> -->
-
               <br>
               <br>
-              <!-- <h4>Enter Sentence:</h4> -->
-
-              <!-- <span class="ui-widget" id="autocomp"> -->
-                <!-- <label for="mySiGML"></label> -->
-                <!-- <input id="mySiGML" class="input" style="margin-top:10px; margin-bottom:20px;width: 500px;">  -->
-                  <!-- <div class="md-form">
-                      <input type="search" id="mySiGML" class="form-control">
-                      <label for="mySiGML" class="active">Enter a sentence or keywords here</label>
-                  </div>
-              </span> -->
 
               <!-- Custom made autocomplete form -->
               <form autocomplete="off">
@@ -491,19 +427,14 @@ function addSuggestion(suggestion){
 
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Translate" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
-              <input type="button" class="btn btn-primary undisplayed" id="freestyle" value="Translate" onclick='callPython(document.getElementById("mySiGML").value);' />
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
-              <!-- <input type="button" value="avatar test" onclick="playText(document.getElementById('mySiGML').value);"> -->
-
-              <!-- <script type="text/python" src="test.py"></script> -->
-              <!-- <button id="freestyle" onclick='goPython(document.getElementById("mySiGML").value);'>freestyle</button> -->
               <br>
               <br>
-              Adjust speed: <span class="CWASASpeed av0" style="margin-bottom:5px"></span>
+              Adjust speed: <span id="speedAdj" class="CWASASpeed av0" style="margin-bottom:5px"></span>
               <br>
               <br>
               Gloss:
-              <input class="txtGloss av0" value="[none]" type="text">
+              <input id="outputGloss" class="txtGloss av0" value="[none]" type="text">
               <br>
 
               <label for="suggestions">Suggestions box: </label>
