--- a/covid19/index.html
+++ b/covid19/index.html
@@ -419,11 +419,10 @@ function addSuggestion(suggestion){
               <!-- Custom made autocomplete form -->
               <form autocomplete="off">
                 <div class="autocomplete" style="width:400px;">
-                  <input id="mySiGML" type="text" name="mySiGML" style="width: 100%;" placeholder="Enter a sentence or keywords here">
+                  <textarea id="mySiGML" type="text" name="mySiGML" rows="2" style="width: 100%;" placeholder="Enter a sentence or keywords here"></textarea>
                 </div>
                 <!-- <input type="submit"> -->
               </form>
-
 
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Translate" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
