labels van speed en gloss verdwijnen nu ook

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -255,7 +255,7 @@ function changeFunc(myRadio) {
     document.getElementById("speedAdj").setAttribute("class", "undisplayed");
     document.getElementById("outputGloss").setAttribute("class", "undisplayed");
     document.getElementById("glossLabel").style.display = 'none';
-    document.getElementById("speedLabel")style.display = 'none';
+    document.getElementById("speedLabel").style.display = 'none';
   }
 }
 
