labels van speed en gloss verdwijnen nu ook

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -246,7 +246,7 @@ function changeFunc(myRadio) {
     document.getElementById("speedAdj").setAttribute("class", "CWASASpeed av0");
     document.getElementById("outputGloss").setAttribute("class", "txtGloss av0");
     document.getElementById("glossLabel").style.display = 'inline-block';
-    document.getElementById("speedLabel")style.display = 'inline-block';
+    document.getElementById("speedLabel").style.display = 'inline-block';
   }
   else if (myRadio.value == "video") {
     document.getElementById("avatar").setAttribute("class", "undisplayed");
