autocomplete suggesties op scherm laten passen

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -422,7 +422,7 @@ function addSuggestion(suggestion){
 
               <!-- Custom made autocomplete form -->
               <form autocomplete="off">
-                <div class="autocomplete" style="width:400px;">
+                <div id="autocomp" class="autocomplete" style="width:400px;">
                   <textarea id="mySiGML" type="text" name="mySiGML" rows="2" style="width: 100%;" placeholder="Enter a sentence or keywords here"></textarea>
                 </div>
                 <!-- <input type="submit"> -->
