--- a/covid19/index.html
+++ b/covid19/index.html
@@ -227,6 +227,10 @@ var jsonvideo = (function() {
 
 // Checks the dictionary for an entry that matches 'text' and sends the SiGML code to the avatar
 function toSiGML(text){
+  if(autocompSugg.includes(text) == false){
+    alert("Please choose an option from the autocomplete suggestions.")
+  }
+  
   // if avatar is checked, sigml is sent
   if (document.getElementById("avatarDisplay").checked) {
     entry = json[text];
