--- a/covid19/index.html
+++ b/covid19/index.html
@@ -175,7 +175,7 @@ var autocompSugg = [];
 
   // Activates the jquery autocomplete function when the user gives input
   $( "#mySiGML" ).autocomplete({
-    source: options,
+    // source: options,
     appendTo: "#autocomp",
     multiple: true,
     mustMatch: false,
@@ -229,25 +229,26 @@ function toSiGML(text){
   if(autocompSugg.includes(text) == false){
     alert("Please choose an option from the autocomplete suggestions.")
   }
-
-  // if avatar is checked, sigml is sent
-  if (document.getElementById("avatarDisplay").checked) {
-    entry = json[text];
-    if (entry == undefined) {
-      alert("There is currently no pre-processed translation available. Please send the sentence you were trying to translate to us via the suggestions box on this page and/or try out the on-demand avatar translation option.")
+  else {
+    // if avatar is checked, sigml is sent
+    if (document.getElementById("avatarDisplay").checked) {
+      entry = json[text];
+      if (entry == undefined) {
+        alert("There is currently no pre-processed translation available. Please send the sentence you were trying to translate to us via the suggestions box on this page and/or try out the on-demand avatar translation option.")
+      }
+      else{
+        playText(entry);
+      }
     }
-    else{
-      playText(entry);
-    }
-  }
-  // if video is checked, source of embedded video changes
-  else if (document.getElementById("videoDisplay").checked) {
-    entry = jsonvideo[text];
-    if (entry == undefined) {
-      alert("There is currently no pre-processed translation available. Please send the sentence you were trying to translate to us via the suggestions box on this page and/or try out the on-demand avatar translation option.")
-    }
-    else{
-    changeVideo(entry);
+    // if video is checked, source of embedded video changes
+    else if (document.getElementById("videoDisplay").checked) {
+      entry = jsonvideo[text];
+      if (entry == undefined) {
+        alert("There is currently no pre-processed translation available. Please send the sentence you were trying to translate to us via the suggestions box on this page and/or try out the on-demand avatar translation option.")
+      }
+      else{
+      changeVideo(entry);
+      }
     }
   }
 }
