--- a/covid19/index.html
+++ b/covid19/index.html
@@ -275,17 +275,28 @@ $(document).ready(function(){
   $('[data-toggle="tooltip"]').tooltip();
 });
 
-function addSuggestion(suggestion){
-  // Requiring fs module in which
-  // writeFile function is defined.
-  const fs = require('fs');
 
-  // Write data in 'suggestions.txt' .
-  fs.appendFile('suggestions.txt', suggestion, (err) => {
-
-      // In case of a error throw err.
-      if (err) throw err;
+//Stores suggestions
+function addSuggestion(text){
+  showBusyState();
+  $.ajax({
+    url : 'suggestions.php',
+    type : 'POST',
+    data: {"input": text},
+    dataType: "json",
+    success : onSuccess,
+    error : onError,
   });
+  function onSuccess(result) {
+    showBusyState(false);
+  }
+  function onError(xhr, error) {
+    console.log ('Something went wrong. Error message: '+error);
+    showBusyState(false);
+  }
+  function showBusyState(state) {
+    $(document.body).toggleClass('busy', state===undefined?true:state);
+  }
 }
 
 </script>
@@ -447,7 +458,7 @@ function addSuggestion(suggestion){
               <label for="suggestions">Suggestions box: </label>
               <br>
               <input id="suggestions" class="input" style="margin-top:5px; margin-bottom:10px; width: 400px;">
-             <!--  <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" /> -->
+              <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
         </span>
 
         <!-- <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
