--- a/covid19/index.html
+++ b/covid19/index.html
@@ -280,7 +280,7 @@ $(document).ready(function(){
 function addSuggestion(text){
   showBusyState();
   $.ajax({
-    url : 'suggestions.php',
+    url : '../suggestions.php',
     type : 'POST',
     data: {"input": text},
     dataType: "json",
