--- a/covid19/index.html
+++ b/covid19/index.html
@@ -455,10 +455,10 @@ function addSuggestion(text){
               <input id="outputGloss" class="txtGloss av0" value="[none]" type="text">
               <br>
 
-              <label for="suggestions">Suggestions box: </label>
+              <label for="suggestions" style="display: inline-block;">Suggestions box: </label>
               <br>
               <input id="suggestions" class="input" style="margin-top:5px; margin-bottom:10px; width: 400px;">
-              <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" />
+              <!-- <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" /> -->
         </span>
 
         <!-- <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
