javascript verdeeld over aparte js bestanden zodat het overzichtelijk blijft

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -74,7 +74,7 @@
 <!-- script for communication with and set up of the avatar -->
 <script language="javascript" type="text/javascript" src="../js/avatarJS.js"></script>
 <!-- script specific to zonmw project -->
-<script language="javascript" type="text/javascript" src="js/zonmwJS.js"></script>
+<script language="javascript" type="text/javascript" src="zonmwJS.js"></script>
 
 </head>
 
