--- a/covid19/index.html
+++ b/covid19/index.html
@@ -211,7 +211,7 @@
               </form>
 
               <br>
-              <input type="button" class="btn btn-primary" id="play" value="Translate" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
+              <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
               <br>
               <br>
