pre-processed en pre-recorded labels weggehaald

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -192,12 +192,12 @@
             <br>
             <!-- Defines the button and questioncircle displayed for the option "video" -->
               <input type="radio" id="videoDisplay" name="display" value="video" onclick="changeFunc(this);">
-              <label for="video" style="margin-right:5px">Pre-recorded video translation</label>
+              <label for="video" style="margin-right:5px">Video translation</label>
 
             <br>
              <!-- Defines the button and questioncircle displayed for the option "avatar" -->
               <input type="radio" id="avatarDisplay" name="display" value="avatar" checked onclick="changeFunc(this);">
-              <label for="avatar" style="margin-right: 5px">Pre-processed avatar translation</label>
+              <label for="avatar" style="margin-right: 5px">Avatar translation</label>
 
               <br>
               <br>
