--- a/covid19/index.html
+++ b/covid19/index.html
@@ -126,6 +126,7 @@
 
 <!-- About -->
 <section class="projects-section bg-light" id="About">
+  <h1>About</h1>
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
@@ -172,6 +173,7 @@
 <!-- Translate -->
 
 <section class="projects-section bg-white" id="Translate">
+   <h1>Translate</h1>
     <div class="container" height="100%">
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
@@ -265,6 +267,7 @@
 
 <!-- Project info section -->
 <section class="projects-section bg-light" id="ProjectInfo">
+   <h1>Project Information</h1>
 
     <div class="container" height="100%">
 
@@ -368,7 +371,7 @@
 
 <!-- Resources section -->
 <section class="projects-section bg-white" id="Resources">
-
+   <h1>Resources</h1>
       <div class="container" height="100%">
           <div class="project-text pt-0 text-lg-left">
               <h2>Further resources</h2>
