--- a/covid19/index.html
+++ b/covid19/index.html
@@ -49,7 +49,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand" href="../index.html">
+        <a class="navbar-brand js-scroll-trigger" href="../index.html">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
