--- a/covid19/index.html
+++ b/covid19/index.html
@@ -132,7 +132,7 @@
 
 <!-- Translate -->
 <script>
-const partofday = new Date().getHours();
+var partofday = new Date().getHours();
 if (partofday < 12) {
     link = "https://www.youtube-nocookie.com/embed/gsFNU0RL8nI?rel=0&amp;showinfo=0&amp;autoplay=1";
   } else if (partofday < 18) {
