--- a/covid19/index.html
+++ b/covid19/index.html
@@ -157,6 +157,10 @@ if (partofday < 12) {
           <iframe id="videoHolder" width="600" height="500" src=link frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
         </span>
 
+        <script type="text/javascript">
+          document.getElementById("videoHolder").src = link;
+        </script>
+
         <span align="left" style="display:inline-block; vertical-align:top; margin:30px;">
             <label for="option" style="margin-right:-100px; margin-bottom:15px">
                 <h4>Choose a translation option:</h4>
