--- a/covid19/index.html
+++ b/covid19/index.html
@@ -134,6 +134,7 @@
 <section class="projects-section bg-white" id="Translate">
    <h1 align="center">Translate</h1>
     <div class="container" height="100%">
+      <div id="alertZonMwTran" class="alertBox"></div>
         <!-- CWA signing avatar panel 0 -->
         <!--================================================================-->
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
@@ -404,10 +405,11 @@
 
 <!-- script for communication with and set up of the avatar -->
 <script language="javascript" type="text/javascript" src="../js/avatarJS.js"></script>
-<!-- script specific to zonmw project -->
-<script language="javascript" type="text/javascript" src="zonmwJS.js"></script>
 <!-- script for shared functions across all pages -->
 <script language="javascript" type="text/javascript" src="../js/generalJS.js"></script>
+<!-- script specific to zonmw project -->
+<script language="javascript" type="text/javascript" src="zonmwJS.js"></script>
+
 
 </body>
 </html>
