range of numbers probeersel

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -185,6 +185,12 @@
                 <!-- <input type="submit"> -->
               </form>
 
+              <div>
+               <label for="minutes" style="display: inline-block;">Number of minutes:</label>
+               <input type="number" id="minutes" name="minutes" min="2" max="59" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="checkText(document.getElementById('mySiGML').value, document.getElementById('minutes').value);">
+              </div>
+
               <br>
               <input type="button" class="btn btn-primary" id="play" value="Play" onclick='toSiGML(document.getElementById("mySiGML").value);'/>
               <input type="button" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();' />
