aparte autocomplete suggesties voorde avatar

--- a/covid19/index.html
+++ b/covid19/index.html
@@ -132,7 +132,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate">
-    <div class="container" height="100%">
+    <div class="container" height="100%" align="center">
       <div id="alertZonMwTran" class="alertBox"></div>
       <h1 align="center">Translate</h1>
         <!-- CWA signing avatar panel 0 -->
