--- a/covid19/index.html
+++ b/covid19/index.html
@@ -186,7 +186,7 @@
               </form>
 
               <div id="minutesBox" class="undisplayed">
-               <label for="minutes" style="display: inline-block;">Please choose a number between 1 and 60 to fill in the blank:</label>
+               <label for="minutes" style="display: inline-block;">"Number of minutes":</label>
                <input type="number" id="minutes" name="minutes" min="2" max="59" value="2" style="display: inline-block;">
                <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('minutes').value > 59){alertMessage('error','Please input a number between 1 and 60','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('minutes').value);}">
               </div>
