--- a/covid19/index.html
+++ b/covid19/index.html
@@ -132,7 +132,7 @@
 
 <!-- Translate -->
 <section class="projects-section bg-white" id="Translate">
-    <div class="container" height="100%" align="center">
+    <div class="container-fluid" height="100%" align="center">
       <div id="alertZonMwTran" class="alertBox"></div>
       <h1 align="center">Translate</h1>
         <!-- CWA signing avatar panel 0 -->
@@ -186,9 +186,33 @@
               </form>
 
               <div id="minutesBox" class="undisplayed">
-               <label for="minutes" style="display: inline-block;">"Number of minutes":</label>
-               <input type="number" id="minutes" name="minutes" min="2" max="59" value="2" style="display: inline-block;">
-               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('minutes').value > 59){alertMessage('error','Please input a number between 1 and 60','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('minutes').value);}">
+               <label for="minutes" style="display: inline-block;">Number of minutes:</label>
+               <input type="number" id="minutes" name="minutes" min="1" max="59" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('minutes').value > 59){alertMessage('error','Please input a number between 0 and 60','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('minutes').value);}">
+              </div>
+
+              <div id="hoursBox" class="undisplayed">
+               <label for="hours" style="display: inline-block;">Number of hours:</label>
+               <input type="number" id="hours" name="hours" min="1" max="72" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('hours').value > 72){alertMessage('error','Please input a number between 0 and 73','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('hours').value);}">
+              </div>
+
+              <div id="daysBox" class="undisplayed">
+               <label for="days" style="display: inline-block;">Number of days:</label>
+               <input type="number" id="days" name="days" min="1" max="20" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('days').value > 20){alertMessage('error','Please input a number between 0 and 73','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('days').value);}">
+              </div>
+
+              <div id="weeksBox" class="undisplayed">
+               <label for="weeks" style="display: inline-block;">Number of weeks:</label>
+               <input type="number" id="weeks" name="weeks" min="1" max="" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('weeks').value > 11){alertMessage('error','Please input a number between 0 and 12','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('weeks').value);}">
+              </div>
+
+              <div id="monthsBox" class="undisplayed">
+               <label for="months" style="display: inline-block;">Number of months:</label>
+               <input type="number" id="months" name="months" min="1" max="" value="1" style="display: inline-block;">
+               <input type="submit" style="display: inline-block;" onclick="if(1 > document.getElementById('months').value > 11){alertMessage('error','Please input a number between 0 and 12','alertZonMwTran');} else{toSiGML(document.getElementById('mySiGML').value, document.getElementById('months').value);}">
               </div>
 
               <br>
