--- a/covid19/index.html
+++ b/covid19/index.html
@@ -60,9 +60,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Home</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Translate!</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Project info</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Further resources</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Translate</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Project Information</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Further Resources</a></li>
                 <li class="nav-item"><a class="nav-link" href="index-nl.html">NL</a></li>
             </ul>
         </div>
