--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -49,7 +49,7 @@
 <!-- Navigation-->
 <nav class="navbar navbar-shrink navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="../index.html">
+        <a class="navbar-brand js-scroll-trigger" href="../index-nl.html">
         <img src="../images/hand-icon.png" height="25">
           SignLab Amsterdam
         </a>
@@ -59,10 +59,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Home</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Project Informatie</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Vertaal</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Project Informatie</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Meer Informatie</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Over Ons</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Extra Informatie</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html">EN</a></li>
             </ul>
         </div>
@@ -231,7 +231,7 @@
               <label for="suggestions" style="display: inline-block;">Suggesties: </label>
               <br>
               <textarea id="suggestions" class="inputBox" placeholder="Vul hier suggesties in. Als u meer dan 1 woord wilt suggereren, scheid ze met ';'" onkeydown="if (event.keyCode == 13){event.preventDefault(); addSuggestion(document.getElementById('suggestions').value, 'alertZonMwTran');}"></textarea>
-              <input type="button" value="Send" style="display: inline-block;" onclick='addSuggestion(document.getElementById("suggestions").value, "alertZonMwTran");'/>
+              <input type="button" value="Verstuur" style="display: inline-block;" onclick='addSuggestion(document.getElementById("suggestions").value, "alertZonMwTran");'/>
         </span>
 
         <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
@@ -307,9 +307,9 @@
 
                 <!-- Funding -->
                 <div class="project-text pt-0 text-lg-left">
-                    <h2>Financiering</h2>
+                    <h2>Financiëring</h2>
                     <p class="text-black-50 mb-0">
-                      Dankbaar erkennen we financiering van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
+                      Dankbaar erkennen we financiëring van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
                       <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programma</a>.
                     </p>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
@@ -338,16 +338,11 @@
                          We zijn
                          <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> vooral dankbaar, voor het beschikbaar maken van een distributie van de software voor ons project.
                     </p>
-                    <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
 
-                <!-- Geneva -->
-
-                <div class="project-text pt-0 text-lg-left">
                     <h5>University of Geneva</h5>
                     <p class="mb-3 text-black-50 mt-1">
                         De
-                        <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/" target="_blank">Afdeling vertaaltechnologie</a>
+                        <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/" target="_blank">Afdeling Vertaaltechnologie</a>
                         van de
                         <a href="https://www.unige.ch/" target="_blank">University of Geneva</a>
                         ontwikkelt een vergelijkbare vertalings-tool voor Zwitsers-Franse Gebarentaal als onderdeel van het
@@ -386,7 +381,7 @@
                 Op de
                 <a href="https://www.wattelt.org/corona/" target="_blank">Wattelt!</a> website
                 vindt u een video met algemeen advies voor medisch personeel met dove patienten in tijden van COVID-19.
-                Deze video leert u ook vijftien essentiele gebaren.
+                Deze video leert u ook vijftien essentiele gebaren aan.
               </p>
               <hr class="d-none d-lg-block mb-0 ml-0" />
           </div>
