--- a/covid19/index.html
+++ b/covid19/index.html
@@ -59,9 +59,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Home</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Project Information</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Translate</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Project Information</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">About Us</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Further Resources</a></li>
                 <li class="nav-item"><a class="nav-link" href="index-nl.html">NL</a></li>
             </ul>
@@ -338,12 +338,7 @@
                          We are especially grateful to
                          <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> for providing a distribution of the software for our project.
                     </p>
-                    <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
 
-                <!-- Geneva -->
-
-                <div class="project-text pt-0 text-lg-left">
                     <h5>University of Geneva</h5>
                     <p class="mb-3 text-black-50 mt-1">
                         The
