--- a/covid19/index.html
+++ b/covid19/index.html
@@ -312,6 +312,7 @@
                     </p>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
+              </div>
 
             <!-- Column for partners -->
 
@@ -335,6 +336,7 @@
                          We are especially grateful to
                          <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> for providing a distribution of the software for our project.
                     </p>
+
 
                     <h5>University of Geneva</h5>
                     <p class="mb-3 text-black-50 mt-1">
