--- a/covid19/index.html
+++ b/covid19/index.html
@@ -349,7 +349,7 @@
                     </p>
                     <p class="mb-3 text-black-50">
                         <a href="https://www.unige.ch/fti/en/faculte/departements/dtim/membrestim/david/" target="_blank">Bastien David</a>
-                        of the Geneva group is helping us with encoding NGT signs in SiGML.
+                        of the Geneva group is helping us with encoding NGT signs in SiGML.<br>
                     </p>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
