--- a/covid19/index.html
+++ b/covid19/index.html
@@ -334,7 +334,7 @@
 
                     <p class="text-black-50 mb-0">
                          We are especially grateful to
-                         <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> for providing a distribution of the software for our project.
+                         <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> for providing a distribution of the software for our project.<br>
                     </p>
 
 
