--- a/covid19/index.html
+++ b/covid19/index.html
@@ -89,7 +89,7 @@
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
-            <div class="col-lg-6">
+            <div class="col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -108,7 +108,7 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col-lg-6">
+            <div class="col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -123,15 +123,20 @@
             </div>
 
             <!-- Funding -->
-            <div class="project-text pt-0 text-lg-left">
-                <h2>Funding</h2>
-                <p class="text-black-50 mb-0">
-                  We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
-                  <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
-                </p>
-                <hr class="d-none d-lg-block mb-0 ml-0" />
+            <div class="col-lg-4">
+                <div class="bg-light text-center h-100 project">
+                    <div class="d-flex h-100">
+                      <div class="project-text pt-0 text-lg-left">
+                          <h4>Funding</h4>
+                          <p class="text-black-50 mb-0">
+                            We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
+                            <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
+                          </p>
+                          <hr class="d-none d-lg-block mb-0 ml-0" />
+                      </div>
+                    </div>
+                </div>
             </div>
-        </div>
         </div>
     </div>
 </section>
