--- a/covid19/index.html
+++ b/covid19/index.html
@@ -126,7 +126,7 @@
             <div class="col-lg-4">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
-                      <div class="project-text pt-0 text-lg-left">
+                      <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                           <h4>Funding</h4>
                           <p class="text-black-50 mb-0">
                             We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
@@ -337,7 +337,7 @@
                         <a href="https://www.uea.ac.uk/" target="_blank">University of East Anglia</a>.
                     </p>
 
-                    <p class="text-black-50 mb-0">
+                    <p class="text-black-50 mb-3">
                          We are especially grateful to
                          <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> for providing a distribution of the software for our project.<br>
                     </p>
