--- a/covid19/index.html
+++ b/covid19/index.html
@@ -128,7 +128,7 @@
                     <div class="d-flex h-100">
                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                           <h4>Funding</h4>
-                          <p class="text-black-50 mb-0">
+                          <p class="mb-1 text-black-50">
                             We gratefully acknowledge funding from the Netherlands Organisation for Innovation in Healthcare (ZonMw) through the
                             <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programme</a>.
                           </p>
