--- a/covid19/index.html
+++ b/covid19/index.html
@@ -59,9 +59,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Project Information</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Project Information</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Translate</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">About Us</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">About Us</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Further Resources</a></li>
                 <li class="nav-item"><a class="nav-link" href="index-nl.html">NL</a></li>
             </ul>
@@ -84,8 +84,8 @@
 
 <!--================================================================-->
 
-<!-- About -->
-<section class="projects-section bg-light" id="About">
+<!-- ProjectInfo -->
+<section class="projects-section bg-light" id="ProjectInfo">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
@@ -108,7 +108,7 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col-lg-5">
+            <div class="col-lg-4.6">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -123,7 +123,7 @@
             </div>
 
             <!-- Funding -->
-            <div class="col-lg-3">
+            <div class="col-lg-3.5">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                       <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -282,8 +282,8 @@
 
 <!--================================================================-->
 
-<!-- Project info section -->
-<section class="projects-section bg-light" id="ProjectInfo">
+<!-- About us section -->
+<section class="projects-section bg-light" id="About">
 
     <div class="container" height="100%">
 
