--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -59,9 +59,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Project Informatie</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Project Informatie</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Vertaal</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#ProjectInfo">Over Ons</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Over Ons</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Extra Informatie</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html">EN</a></li>
             </ul>
@@ -84,8 +84,8 @@
 
 <!--================================================================-->
 
-<!-- About -->
-<section class="projects-section bg-light" id="About">
+<!-- ProjectInfo -->
+<section class="projects-section bg-light" id="ProjectInfo">
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
@@ -268,8 +268,8 @@
 
 <!--================================================================-->
 
-<!-- Project info section -->
-<section class="projects-section bg-light" id="ProjectInfo">
+<!-- About us section -->
+<section class="projects-section bg-light" id="About">
 
     <div class="container" height="100%">
       <h1 align="center">Project Informatie</h1>
