--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -334,9 +334,9 @@
                         <a href="https://www.uea.ac.uk/" target="_blank">University of East Anglia</a>.
                     </p>
 
-                    <p class="text-black-50 mb-0">
+                    <p class="text-black-50 mb-3">
                          We zijn
-                         <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> vooral dankbaar, voor het beschikbaar maken van een distributie van de software voor ons project.
+                         <a href="https://people.uea.ac.uk/j_glauert" target="_blank">John Glauert</a> vooral dankbaar, voor het beschikbaar maken van een distributie van de software voor ons project.<br>
                     </p>
 
                     <h5>University of Geneva</h5>
