--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -89,7 +89,7 @@
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
-            <div class="col-lg-6">
+            <div class="col-lg">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -108,13 +108,28 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col-lg-6">
+            <div class="col-lg-5">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
                             <h4 class="text-black">Hoe helpt deze website?</h4>
                             <p class="mb-1 text-black-50">
                             Deze website geeft artsen en verpleegkundigen de mogelijkheid om zinnen die veel gebruikt worden in de diagnose en behandeling van COVID-19 van het Nederlands naar Nederlandse Gebarentaal te vertalen. Vertalingen worden getoond via videos en een geanimeerde avatar.
+                            </p>
+                            <hr class="d-none d-lg-block mb-0 ml-0" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg">
+                <div class="bg-light text-center h-100 project">
+                    <div class="d-flex h-100">
+                        <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
+                            <h4 class="text-black">Financiëring</h4>
+                            <p class="mb-1 text-black-50">
+                              Dankbaar erkennen we financiëring van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
+                              <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programma</a>.
                             </p>
                             <hr class="d-none d-lg-block mb-0 ml-0" />
                         </div>
@@ -298,16 +313,6 @@
                     <p class="text-black-50 mb-3">
                       <a href="https://www.wattelt.org/" target="_blank">Wat Telt!</a><br>
                       <a href="https://maxvonk.com/">Max Vonk video productions</a><br>
-                    </p>
-                    <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
-
-                <!-- Funding -->
-                <div class="project-text pt-0 text-lg-left">
-                    <h2>Financiëring</h2>
-                    <p class="text-black-50 mb-0">
-                      Dankbaar erkennen we financiëring van de Nederlandse Organisatie voor Gezondheidsonderzoek en Zorginnovatie (ZonMw) door het
-                      <a href="https://www.zonmw.nl/nl/over-zonmw/coronavirus/programmas/programma-detail/covid-19-programma/" target="_blank">COVID-19 programma</a>.
                     </p>
                     <hr class="d-none d-lg-block mb-0 ml-0" />
                 </div>
