--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -89,7 +89,7 @@
     <div class="container">
         <!-- Challenge Row-->
         <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
-            <div class="col-lg">
+            <div class="col-lg-auto">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -108,7 +108,7 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col-lg-5">
+            <div class="col-lg-auto">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
@@ -122,7 +122,7 @@
                 </div>
             </div>
 
-            <div class="col-lg">
+            <div class="col-lg-auto">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
