--- a/covid19/index-nl.html
+++ b/covid19/index-nl.html
@@ -88,7 +88,7 @@
 <section class="projects-section bg-light" id="ProjectInfo">
     <div class="container">
         <!-- Challenge Row-->
-        <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
+        <div class="row  no-gutters mb-2 mb-lg-0">
             <div class="col-lg-auto">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
