--- a/covid19/index.html
+++ b/covid19/index.html
@@ -88,7 +88,7 @@
 <section class="projects-section bg-light" id="ProjectInfo">
     <div class="container">
         <!-- Challenge Row-->
-        <div class="row justify-content-center no-gutters mb-2 mb-lg-0">
+        <div class="row justify-content-center align-items-start no-gutters mb-2 mb-lg-0">
             <div class="col-lg">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
@@ -108,7 +108,7 @@
         <!-- Approach Row-->
 <!--         <div class="row justify-content-center no-gutters">
             <div class="col-lg-6"><img class="img-fluid" src="images/demo-image-01.jpg" alt="" /></div> -->
-            <div class="col-lg-5">
+            <div class="col-lg">
                 <div class="bg-light text-center h-100 project">
                     <div class="d-flex h-100">
                         <div class="project-text pb-1 w-100 my-auto text-center text-lg-left">
